--- a/projet-3/BestMotherFuckingWebsite.html
+++ b/projet-3/BestMotherFuckingWebsite.html
@@ -99,7 +99,7 @@
           <p>The website shouldn't be overfilled with pictures, but it should 
             make the user happy while reading your nonsense words.</p><br>
 
-          <p>You see that fancy cat? He's happy, you should be too.</p><br><br>
+          <p>You see that fancy cat? He is happy, you should be too.</p><br><br>
           
           <p><span class="tl">A cat, just to keep the context of the website.</span></p><br>
 
